code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_91.wast
(assert_invalid
  (module
    (func $type-condition-empty-in-local.tee
      (local i32)
      (local.tee 0 (if(then))) (drop)
    )
  )
  "type mismatch"
)